IndexedDB: IDBCursor.update() should raise exception if key changed https://bugs.webkit.org/show_bug.cgi?id=76952

Source/WebCore:

Move the test from the async task to the synchronous call, per spec. Also re-ordered the tests
done during the synchronous call and the asynchronous task to follow the spec order.

Reviewed by Tony Chang.

Tests: storage/indexeddb/cursor-update.html

* storage/IDBObjectStoreBackendImpl.cpp:
(WebCore::IDBObjectStoreBackendImpl::put): Added check during update() call, order checks per spec.
(WebCore::IDBObjectStoreBackendImpl::putInternal): Move effective key calculation inline.
* storage/IDBObjectStoreBackendImpl.h: Removed selectKeyForPut method.

LayoutTests:

Reviewed by Tony Chang.

* storage/indexeddb/cursor-update-expected.txt:
* storage/indexeddb/cursor-update.html:


Canonical link: https://commits.webkit.org/94341@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@106387 268f45cc-cd09-0410-ab3c-d52691b4dbfc